fix whitespace

--- a/style.css
+++ b/style.css
@@ -440,6 +440,7 @@ body {
         gap: var(--space-400);
         /* border: 3px dashed aliceblue; */
         margin-top: 1.5rem;
+        margin-bottom: 1.5rem;
     }
 
     .hero::after {
